--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Complex App</a>
+          <a class="navbar-brand" href="/">Complex App</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,7 +42,7 @@
             <form class="d-flex" role="search" action="/login" method="POST">
               <input class="form-control me-2" type="text" name="username" placeholder="Username" aria-label="Search">
               <input class="form-control me-2" type="password" name="password" placeholder="Password" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Login</button>
             </form>
           </div>
         </div>
