--- a/views/partials/header-auth.ejs
+++ b/views/partials/header-auth.ejs
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Complex App</a>
+          <a class="navbar-brand" href="/">Complex App</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,9 +39,11 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
             </ul>
+            <a href="/create-post" class="btn btn-success mx-1">Create Post</a>
+            
             <form class="d-flex" role="search" action="/logout" method="POST">
               
-              <button class="btn btn-outline-success" type="submit">Logout</button>
+              <button class="btn btn-outline-secondary" type="submit">Logout</button>
             </form>
           </div>
         </div>
