--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -1,4 +1,4 @@
-<%-include('partials/header-auth')%>
+<%-include('partials/header')%>
 
 <% success.forEach(function(m){ %>
     <div class="alert alert-success mt-4" role="alert"><%=m %></div>
