--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,7 +25,22 @@
         </li> -->
       </ul>
       <div class="tab-content" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">...</div>
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+          <div class="list-group">
+            <% userinfo.posts.forEach(function(el){%>
+            <!-- <button type="button" class="list-group-item list-group-item-action active" aria-current="true"> -->
+             <a href="/view-post/<%=el._id%>">
+              <button type="button" class="list-group-item list-group-item-action" aria-current="true">
+                <b><%=el.title%></b> on <%=el.createdAt%>
+              </button>
+             </a> 
+            <% }) %>
+            <!-- <button type="button" class="list-group-item list-group-item-action">A second button item</button>
+            <button type="button" class="list-group-item list-group-item-action">A third button item</button>
+            <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
+            <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button item</button> -->
+          </div>
+        </div>
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">...</div>
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
         <!-- <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div> -->
