--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -3,9 +3,10 @@
 <div class="row mt-4">
 
     <% if(user.id==user_id){%>
+        <!-- hello -->
     <div class="d-flex justify-content-end">
-        <i class="bi bi-pencil-square text-primary"></i>
-        <i class="bi bi-trash3-fill mx-2 text-danger"></i>
+        <a href="/edit-post/<%=post._id%>"><i class="bi bi-pencil-square text-primary"></i></a>
+        <a href=""><i class="bi bi-trash3-fill mx-2 text-danger"></i></a>
     </div>
     <%}%>
 
